Crashes in mozilla::gfx::RecordedPathCreation::PlayEvent starting in 89 during GPU process start
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
People
(Reporter: jrmuizel, Assigned: bobowen)
References
Details
Crash Data
Attachments
(1 file)
|
Bug 1709644: Add null checks for GetReferenceDrawTarget when called on CanvasTranslator. r=jrmuizel!
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
This is one of the top GPU process crashes in 89
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
Also, return false from CreateReferenceTexture when mBaseDT is null.
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Comment 4•5 years ago
|
||
| bugherder | ||
Comment 5•5 years ago
•
|
||
No crashes in 89, so no need for an uplift.
Disregard my previous comment, that's a GPU crash, we don't get those in crash-stats.
Comment 6•5 years ago
|
||
The patch landed in nightly and beta is affected.
:bobowen, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 7•5 years ago
|
||
Comment on attachment 9220423 [details]
Bug 1709644: Add null checks for GetReferenceDrawTarget when called on CanvasTranslator. r=jrmuizel!
Beta/Release Uplift Approval Request
- User impact if declined: This is one of the top GPU process crashes, when looking at telemetry crash pings.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple null checks.
- String changes made/needed: None
Comment 8•5 years ago
|
||
Comment on attachment 9220423 [details]
Bug 1709644: Add null checks for GetReferenceDrawTarget when called on CanvasTranslator. r=jrmuizel!
Approved for 89.0b12.
Comment 9•5 years ago
|
||
| bugherder uplift | ||
Description
•