Bug 1709644: Add null checks for GetReferenceDrawTarget when called on CanvasTranslator. r=jrmuizel, a=RyanVM

Also, return false from CreateReferenceTexture when mBaseDT is null.

Differential Revision: https://phabricator.services.mozilla.com/D114386